--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPkGO1Vfjxr/JPmau8mC+A",
+      "authorship_tag": "ABX9TyP17FXZD8wJ36w6iBqF8Oc3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,30 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "7f5ci6AnfVkg"
+        "id": "7f5ci6AnfVkg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b5fc41a7-fde3-41dd-8213-ac7fa0087e49"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50\n",
+            "150\n"
+          ]
+        }
+      ],
       "source": [
         "a=10\n",
         "b=a*5\n",
-        "print(b)"
+        "print(b)\n",
+        "\n",
+        "c=3\n",
+        "d=b*c\n",
+        "print(d)"
       ]
     }
   ]
